--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 
 # Site
 title: MindPalace
-subtitle: Find What you want
+subtitle: 祝翔的个人网站
 description: 知识带来自由
-author: Carl Hugo
-language: 
+author: 祝翔
+language: zh-Hans
 timezone:
 
 # URL
