--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -286,7 +286,7 @@ mathjax:
 #swiftype_key:
 
 # Baidu Analytics ID
-#baidu_analytics:
+baidu_analytics: c9cd255b280aa570956578700a3e5453
 
 # Duoshuo ShortName
 #duoshuo_shortname:
