--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -130,26 +130,6 @@ font:
 # ---------------------------------------------------------------
 
 
-# Social Links
-# Key is the link label showing to end users.
-# Value is the target link (E.g. GitHub: https://github.com/iissnan)
-#social:
-  #LinkLabel: Link
-
-
-# Social Links Icons
-# Icon Mapping:
-#   Map a menu item to a specific FontAwesome icon name.
-#   Key is the name of the item and value is the name of FontAwesome icon. Key is case-senstive.
-#   When an globe mask icon presenting up means that the item has no mapping icon.
-social_icons:
-  enable: true
-  # Icon Mappings.
-  # KeyMapsToSocialItemKey: NameOfTheIconFromFontAwesome
-  GitHub: github
-  Twitter: twitter
-  Weibo: weibo
-
 
 # Sidebar Avatar
 # in theme directory(source/images): /images/avatar.jpg
@@ -536,3 +516,15 @@ images: images
 
 # Theme version
 version: 5.1.0
+
+# Social links
+social:
+  GitHub: https://github.com/zxiang179
+  
+  
+# Social Icons
+social_icons:
+  enable: true
+  # Icon Mappings
+  GitHub: github
+  
