--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -520,11 +520,13 @@ version: 5.1.0
 # Social links
 social:
   GitHub: https://github.com/zxiang179
-  
+  知乎: https://www.zhihu.com/people/zhu-xi-zhao-70
+  csdn: http://blog.csdn.net/zxiang248
   
 # Social Icons
 social_icons:
   enable: true
   # Icon Mappings
   GitHub: github
-  
+  知乎: quory
+  csdn: heartbeat
