--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -371,9 +371,9 @@ vkontakte_api:
 # Show number of visitors to each article.
 # You can visit https://leancloud.cn get AppID and AppKey.
 leancloud_visitors:
-  enable: false
-  app_id: #<app_id>
-  app_key: #<app_key>
+  enable: true
+  app_id: 4O0yCTshO5mMmnLJj44xyUCb-gzGzoHsz
+  app_key: x7lOxotWFFxVI6p5kh7nrDxI
 
 # Show PV/UV of the website/page with busuanzi.
 # Get more information on http://ibruce.info/2015/04/04/busuanzi/
@@ -530,3 +530,4 @@ social_icons:
   GitHub: github
   知乎: quora
   csdn: heartbeat
+  
