--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -520,7 +520,7 @@ version: 5.1.0
 # Social links
 social:
   GitHub: https://github.com/zxiang179
-  知乎: https://www.zhihu.com/people/zhu-xi-zhao-70
+  quora: https://www.zhihu.com/people/zhu-xi-zhao-70
   csdn: http://blog.csdn.net/zxiang248
   
 # Social Icons
@@ -528,6 +528,10 @@ social_icons:
   enable: true
   # Icon Mappings
   GitHub: github
-  知乎: quora
+  quora: quora
   csdn: heartbeat
-  
+
+# 打赏  
+reward_comment: 坚持原创技术分享，您的支持将鼓励我继续创作！
+wechatpay: /images/wechat-reward.JPG
+alipay: /images/alipay-reward.jpg
