--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -454,7 +454,7 @@ use_motion: true
 fancybox: true
 
 # Canvas-nest
-canvas_nest: false
+canvas_nest: true
 
 # Script Vendors.
 # Set a CDN address for the vendor you want to customize.
