--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -295,7 +295,7 @@ changyan:
 
 # Support for LiveRe comments system.
 # You can get your uid from https://livere.com/insight/myCode (General web site)
-#livere_uid: your uid
+livere_uid: MTAyMC8yODQwMS80OTcy
 
 # Baidu Share
 # Available value:
